# Mario

./: README.md  main.py  pyproject.toml  requirements.txt
classes/: Collider.py  EntityCollider.py  Font.py  GaussianBlur.py  Input.py  Level.py  Menu.py  Pause.py  Sprites.py  Spritesheet.py
entities/: CoinBrick.py  Item.py  Koopa.py  Mario.py  RandomBox.py  Star.py
entities/Boss/: maryo.py
levels/: Level1-1.json
sprites/: Animations.json  BackgroundSprites.json  Goomba.json  ItemAnimations.json  Koopa.json  Mario.json  RedMushroom.json  Star.json
traits/: jump.py
